tests/miniJava/pos/001256_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( new java ( ) ) if ( 0 ) { } else { } } }
