tests/miniJava/neg/000011_mutation.MiniJava
class else java { public static void Main ( String [ ] java ) { { } } }
